--- a/index.html
+++ b/index.html
@@ -69,18 +69,17 @@
         </div>
         <div id="spalteSieben" class="spalte">
             <h3>Andere Spiele</h3>
-            <button onclick="button(34)" >10 </button>
-            <button onclick="button(35)" >20 </button>
-            <button onclick="button(36)" >30 </button>
+            <button onclick="button(34)" >40 </button>
+            <button onclick="button(35)" >40 </button>
+            <button onclick="button(36)" >40 </button>
             <button onclick="button(37)" >40 </button>
-            <button onclick="button(38)" >50 </button>
         </div>     
     </div>
     <div id="popUp">
         <p id="questionText">Frage</p>
         <button id="awnserButton" onclick="solutionShow(awnserId)" awnserId="">Lösung</button>
         <p id="awnserText">Antwort</p>
-        <button id="closeButton" onclick="hidePopup()"></button>
+        <button id="closeButton" onclick="hidePopup()">X</button>
     </div>
 
 
