--- a/index.html
+++ b/index.html
@@ -5,83 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
-    <script defer src="index.js"></script>
+    
 
 </head>
 <body>
     <div class="content">
-        <div id="spalteEins" class="spalte">
-            <h3> Jan & Sophie</h3>
-            <div id="JansSpalten">
-                <div class="jsspalte">
-                    <button onclick="button(1)"> 10 </button>
-                    <button onclick="button(2)" >20 </button>
-                    <button onclick="button(3)" >30 </button>
-                    <button onclick="button(4)" >50 </button>
-                </div>
-                <div class="jsspalte">
-                    <button onclick="button(5)"> 10 </button>
-                    <button onclick="button(6)" >20 </button>
-                    <button onclick="button(7)" >30 </button>
-                    <button onclick="button(8)" >50 </button>
-                </div>
-            </div>
-        </div>
-        <div id="spalteZwei" class="spalte">
-            <h3>"Allgemeinwissen"</h3>
-            <button onclick="button(9)" >10 </button>
-            <button onclick="button(10)" >20 </button>
-            <button onclick="button(11)" >30</button>
-            <button onclick="button(12)" >40 </button>
-            <button onclick="button(13)" >50 </button>
-        </div>
-        <div id="spalteDrei" class="spalte">
-            <h3>Sex</h3>
-            <button onclick="button(14)" >10 </button>
-            <button onclick="button(15)" >20</button>
-            <button onclick="button(16)" >30</button>
-            <button onclick="button(17)" >40 </button>
-            <button onclick="button(18)" >50 </button>
-        </div>    
-        <div id="spalteVier" class="spalte">
-            <h3>Film & TV</h3>
-            <button onclick="button(19)" >10 </button>
-            <button onclick="button(20)" >20 </button>
-            <button onclick="button(21)" >30 </button>
-            <button onclick="button(22)" >40 </button>
-            <button onclick="button(23)" >50 </button>
-        </div>
-        <div id="spalteFünf" class="spalte">
-            <h3>Musik</h3>
-            <button onclick="button(24)" >10 </button>
-            <button onclick="button(25)" >20 </button>
-            <button onclick="button(26)" >30 </button>
-            <button onclick="button(27)" >40 </button>
-            <button onclick="button(28)" >50 </button>
-        </div>   
-        <div id="spalteSechs" class="spalte">
-            <h3>Geschichte</h3>
-            <button onclick="button(29)" >10</button>
-            <button onclick="button(30)" >20 </button>
-            <button onclick="button(31)" >30 </button>
-            <button onclick="button(32)" >40 </button>
-            <button onclick="button(33)" >50 </button>
-        </div>
-        <div id="spalteSieben" class="spalte">
-            <h3>Andere Spiele</h3>
-            <button onclick="button(34)" >40 </button>
-            <button onclick="button(35)" >40 </button>
-            <button onclick="button(36)" >40 </button>
-            <button onclick="button(37)" >40 </button>
-        </div>     
-    </div>
-    <div id="popUp">
-        <p id="questionText">Frage</p>
-        <button id="awnserButton" onclick="solutionShow(awnserId)" awnserId="">Lösung</button>
-        <p id="awnserText">Antwort</p>
-        <button id="closeButton" onclick="hidePopup()">X</button>
-    </div>
-
-
+    <h1>Der Heiratet ja wirklich!</h1>
+    <h3>Ein kleines Spiel für unterwegs.</h3>
+    <p>Um die Zeiten zwischen den Aktivitäten zu füllen gibt es ein kleines Spiel. Zwei Teams mit je drei Leuten treten gegeneinander an. Linus als Spielersteller wird zwar mitbestraft, aber kann nicht mit raten, daher ist ein Team nur zu zweit.</p>
+    <p>Bestrafung ist auch das Stichwort. Im laufe des Spieles sammeln beide Punkte Teams. Welches Team am Ende des Tages weniger Punkte hat wird bestraft. Hierzu folgt nun den Schritten und startet das Spiel.</p>
+    <ul>
+        <li>Bildet die Teams</li>
+        <li>Überlegt euch in den Teams eine Strafe für das andere Team falls es verliert.</li>
+    </ul>
+    <h3>Spielregeln:</h3>
+    <ul>
+        <li> Jedes Team wählt vom Spielbrett abwechselnd eine Frage.</li>
+        <li>Das Team hat eine Minute Zeit um die Frage zu beantworten.</li>
+        <li>Bei korrekter Antwort erhält das Team die entsprechenden Punkte.</li>
+        <li>Bei einer falschen Antwort wird das Team bestraft und muss entweder einen Klopfer oder einen ekel Jellybean essen.</li>
+        <li>Bei SCHÄTZFRAGEN dürfen beide Teams antworten und die bessere Antwort gewinnt.</li>
+    </ul>
+    <a href="spiel.html"> 
+        <button>START</button>
+    </a>
+</div>
 </body>
 </html>
